fix overflow count number

--- a/openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
@@ -42,11 +42,15 @@
 
 .domain-count-button {
   background-color: @primary-button-background;
-  height: 32px;
-  width: 32px;
+  height: auto;
+  width: auto;
+  padding: 0 4px;
   border-radius: 200px;
   text-align: center;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   span {
     color: @blue-24;
   }
